force-app/main/default/objects/numm__ThirdPartyRule__c/numm__ThirdPartyRule__c.object-meta.xml
<CustomObject>
    <description>Définition des tiers multi entités et multi-collectif</description>
    <label>Role du Tiers</label>
    <nameField>
        <label>Rôle du tiers</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Roles des Tiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>