force-app/main/default/objects/numm__ThirdPartyRule__c/fields/numm__Devise__c.field-meta.xml
<CustomField>
    <fullName>numm__Devise__c</fullName>
    <formula>numm__ThirdParty__r.numm__Devise__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Devise</label>
    <type>Text</type>
</CustomField>