force-app/main/default/objects/numm__ThirdPartyRule__c/fields/numm__Entite__c.field-meta.xml
<CustomField>
    <fullName>numm__Entite__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Entite</label>
    <referenceTo>numm__Entity__c</referenceTo>
    <relationshipLabel>Roles des Tiers</relationshipLabel>
    <relationshipName>Entite</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>