force-app/main/default/objects/numm__ThirdPartyRule__c/fields/numm__Fait_Generateur__c.field-meta.xml
<CustomField>
    <fullName>numm__Fait_Generateur__c</fullName>
    <label>Fait Générateur</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Encaissement</fullName>
            </value>
            <value>
                <fullName>Débit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>