force-app/main/default/objects/numm__ThirdPartyRule__c/fields/numm__IdAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>numm__IdAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte général</label>
    <referenceTo>numm__AccountingCode__c</referenceTo>
    <relationshipName>Tiers_Entit_s</relationshipName>
    <type>Lookup</type>
</CustomField>