force-app/main/default/objects/numm__ThirdPartyRule__c/fields/numm__IdctrlAccounting__c.field-meta.xml
<CustomField>
    <fullName>numm__IdctrlAccounting__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Collectif</label>
    <referenceTo>numm__CtrlAccounting__c</referenceTo>
    <relationshipName>Collectif</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>