force-app/main/default/objects/numm__ThirdPartyRule__c/fields/numm__IdPaymentPeriod__c.field-meta.xml
<CustomField>
    <fullName>numm__IdPaymentPeriod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Délai de paiement</label>
    <referenceTo>numm__PaymentPeriod__c</referenceTo>
    <relationshipName>Tiers_Entit_s</relationshipName>
    <type>Lookup</type>
</CustomField>