force-app/main/default/objects/numm__ThirdPartyRule__c/fields/numm__IdSettlementMethod__c.field-meta.xml
<CustomField>
    <fullName>numm__IdSettlementMethod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mode de règlement</label>
    <referenceTo>numm__SettlMethod__c</referenceTo>
    <relationshipName>Tiers_Entit_s</relationshipName>
    <type>Lookup</type>
</CustomField>