force-app/main/default/objects/numm__ThirdPartyRule__c/fields/numm__Mail__c.field-meta.xml
<CustomField>
    <fullName>numm__Mail__c</fullName>
    <label>Mail</label>
    <type>Email</type>
</CustomField>