force-app/main/default/objects/numm__ThirdPartyRule__c/fields/numm__nbValueDate__c.field-meta.xml
<CustomField>
    <fullName>numm__nbValueDate__c</fullName>
    <label>Dates de valeur</label>
    <summaryForeignKey>numm__valueDate__c.numm__RoleduTiers__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>