force-app/main/default/objects/numm__ThirdPartyRule__c/fields/numm__RgltAuto_global__c.field-meta.xml
<CustomField>
    <fullName>numm__RgltAuto_global__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Lors des règlements automatiques, la pièce de règlement sera globale pour l&#39;ensemble des règlements de cette banque.</description>
    <label>Règlement global</label>
    <type>Checkbox</type>
</CustomField>