force-app/main/default/objects/numm__ThirdPartyRule__c/fields/numm__Taux_de_TVA__c.field-meta.xml
<CustomField>
    <fullName>numm__Taux_de_TVA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Taux de TVA</label>
    <referenceTo>numm__VATRate__c</referenceTo>
    <relationshipLabel>Roles des Tiers</relationshipLabel>
    <relationshipName>Roles_des_Tiers</relationshipName>
    <type>Lookup</type>
</CustomField>