force-app/main/default/objects/numm__ThirdPartyRule__c/fields/numm__Tech_CategorieJournal__c.field-meta.xml
<CustomField>
    <fullName>numm__Tech_CategorieJournal__c</fullName>
    <formula>if(ISPICKVAL( numm__IdctrlAccounting__r.numm__TypeDeCollectif__c , &#39;FOU&#39;),&#39;Achat&#39;,

if(ISPICKVAL( numm__IdctrlAccounting__r.numm__TypeDeCollectif__c , &#39;CLI&#39;),&#39;Vente&#39;,

if(ISPICKVAL( numm__IdctrlAccounting__r.numm__TypeDeCollectif__c , &#39;BAN&#39;),&#39;Banque&#39;, null)))</formula>
    <label>Tech_CategorieJournal</label>
    <type>Text</type>
</CustomField>