force-app/main/default/objects/numm__ThirdPartyRule__c/fields/numm__ThirdParty__c.field-meta.xml
<CustomField>
    <fullName>numm__ThirdParty__c</fullName>
    <label>Tiers</label>
    <referenceTo>numm__ThirdParty__c</referenceTo>
    <relationshipLabel>Roles du Tiers</relationshipLabel>
    <relationshipName>IdthirdParty</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>