force-app/main/default/objects/numm__ThirdPartyRule__c/fields/numm__Type_de_collectif__c.field-meta.xml
<CustomField>
    <fullName>numm__Type_de_collectif__c</fullName>
    <formula>TEXT(numm__IdctrlAccounting__r.numm__TypeDeCollectif__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type de collectif</label>
    <type>Text</type>
</CustomField>